# VideoLearninigPatternAnalysis

./: .gitignore  main.py  pyproject.toml  requirements.txt  video.py
styles/: style.yaml
